# disgrok

./: .gitignore  LICENSE  README.md  euclid_bot.py  projectStructure   pyproject.toml  requirements.txt
bot/: main.py  server_config.json
scratch/: aixTest.sh  commands.py  main2.py  pytest_dependency.txt  test_commands.py  test_commands_with_mock.py  test_with_fixture.py
